# pretty-pubmed-parser

./: .gitignore  README.md  cspell.config.yaml  pyproject.toml  requirements.txt
.cspell/: custom-dictionary-workspace.txt
pretty_pubmed_parser/: configs.py  debug.ipynb  main.py  ncbi_parser.py
