[tool.poetry]
name = "pretty-pubmed-parser"
version = "0.1.0"
description = ""
authors = ["Timofei Ryko <timofei.ryko@gmail.com>"]
readme = "README.md"
packages = [{include = "pretty_pubmed_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
biopython = "^1.81"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
